@@ -1,222 +1,175 @@
-#--
-# Copyright 2006 by Chad Fowler, Rich Kilmer, Jim Weirich and others.
-# All rights reserved.
-# See LICENSE.txt for permissions.
-#++
+require "minitest/autorun"
+require "support/shortcuts"
+require "rubygems/requirement"
 
-require File.join(File.expand_path(File.dirname(__FILE__)), 'gemutilities')
-require 'rubygems/version'
+class TestGemRequirement < MiniTest::Unit::TestCase
+  include Support::Shortcuts
 
-class TestGemRequirement < RubyGemTestCase
+  def test_equals2
+    r = req "= 1.2"
+    assert_equal r, r.dup
+    assert_equal r.dup, r
 
-  def setup
-    super
+    refute_requirement_equal "= 1.2", "= 1.3"
+    refute_requirement_equal "= 1.3", "= 1.2"
 
-    @r1_2 = Gem::Requirement.new '= 1.2'
-    @r1_3 = Gem::Requirement.new '= 1.3'
+    refute_equal Object.new, req("= 1.2")
+    refute_equal req("= 1.2"), Object.new
   end
 
   def test_initialize
-    r = Gem::Requirement.new '2'
-    assert_equal '= 2', r.to_s, 'String'
-
-    r = Gem::Requirement.new %w[2]
-    assert_equal '= 2', r.to_s, 'Array of Strings'
-
-    r = Gem::Requirement.new Gem::Version.new('2')
-    assert_equal '= 2', r.to_s, 'Gem::Version'
-  end
-
-  def test_equals2
-    assert_equal @r1_2, @r1_2.dup
-    assert_equal @r1_2.dup, @r1_2
-
-    refute_equal @r1_3, @r1_2
-    refute_equal @r1_2, @r1_3
-
-    refute_equal Object.new, @r1_2
-    refute_equal @r1_2, Object.new
-  end
-
-  def test_hash
-    assert_equal @r1_2.hash, @r1_2.dup.hash
-    assert_equal @r1_2.dup.hash, @r1_2.hash
-
-    refute_equal @r1_2.hash, @r1_3.hash
-    refute_equal @r1_3.hash, @r1_2.hash
-  end
-
-  # We may get some old gems that have requirements in old formats.
-  # We need to be able to handle those old requirements by normalizing
-  # them to the latest format.
-  def test_normalization
-    require 'yaml'
-    yamldep = %{--- !ruby/object:Gem::Requirement
-      nums:
-        - 1
-        - 0
-        - 4
-      op: ">="
-      version: ">= 1.0.4"}
-    dep = YAML.load(yamldep)
-    dep.normalize
-    assert_equal ">= 1.0.4", dep.to_s
+    assert_requirement_equal "= 2", "2"
+    assert_requirement_equal "= 2", ["2"]
+    assert_requirement_equal "= 2", v(2)
   end
 
   def test_parse
-    assert_equal ['=', Gem::Version.new(1)], @r1_2.parse('  1')
+    assert_equal ['=', Gem::Version.new(1)], Gem::Requirement.parse('  1')
+    assert_equal ['=', Gem::Version.new(1)], Gem::Requirement.parse('= 1')
+    assert_equal ['>', Gem::Version.new(1)], Gem::Requirement.parse('> 1')
+    assert_equal ['=', Gem::Version.new(1)], Gem::Requirement.parse("=\n1")
 
-    assert_equal ['=', Gem::Version.new(1)], @r1_2.parse('= 1')
-    assert_equal ['>', Gem::Version.new(1)], @r1_2.parse('> 1')
-
-    assert_equal ['=', Gem::Version.new(0)], @r1_2.parse('=')
-    assert_equal ['>', Gem::Version.new(0)], @r1_2.parse('>')
-
-    assert_equal ['=', Gem::Version.new(1)], @r1_2.parse("=\n1")
-    assert_equal ['=', Gem::Version.new(0)], @r1_2.parse("=\njunk")
-
-    assert_equal ['=', Gem::Version.new(2)], @r1_2.parse(Gem::Version.new('2'))
+    assert_equal ['=', Gem::Version.new(2)],
+      Gem::Requirement.parse(Gem::Version.new('2'))
   end
 
-  def test_parse_illformed
+  def test_parse_bad
     e = assert_raises ArgumentError do
-      @r1_2.parse(nil)
+      Gem::Requirement.parse nil
     end
 
     assert_equal 'Illformed requirement [nil]', e.message
 
     e = assert_raises ArgumentError do
-      @r1_2.parse('')
+      Gem::Requirement.parse ""
     end
 
     assert_equal 'Illformed requirement [""]', e.message
   end
 
   def test_satisfied_by_eh_bang_equal
-    r1_2 = Gem::Requirement.new '!= 1.2'
-    v1_1 = Gem::Version.new '1.1'
-    v1_2 = Gem::Version.new '1.2'
-    v1_3 = Gem::Version.new '1.3'
+    r = req '!= 1.2'
 
-    assert_equal true,  r1_2.satisfied_by?(nil)
-    assert_equal true,  r1_2.satisfied_by?(v1_1)
-    assert_equal false, r1_2.satisfied_by?(v1_2)
-    assert_equal true,  r1_2.satisfied_by?(v1_3)
+    assert_satisfied_by nil,   r
+    assert_satisfied_by "1.1", r
+    refute_satisfied_by "1.2", r
+    assert_satisfied_by "1.3", r
   end
 
   def test_satisfied_by_eh_blank
-    r1_2 = Gem::Requirement.new '1.2'
-    v1_1 = Gem::Version.new '1.1'
-    v1_2 = Gem::Version.new '1.2'
-    v1_3 = Gem::Version.new '1.3'
+    r = req "1.2"
 
-    assert_equal false, r1_2.satisfied_by?(nil)
-    assert_equal false, r1_2.satisfied_by?(v1_1)
-    assert_equal true,  r1_2.satisfied_by?(v1_2)
-    assert_equal false, r1_2.satisfied_by?(v1_3)
+    refute_satisfied_by nil,   r
+    refute_satisfied_by "1.1", r
+    assert_satisfied_by "1.2", r
+    refute_satisfied_by "1.3", r
   end
 
   def test_satisfied_by_eh_equal
-    r1_2 = @r1_2
-    v1_1 = Gem::Version.new '1.1'
-    v1_2 = Gem::Version.new '1.2'
-    v1_3 = Gem::Version.new '1.3'
+    r = req "= 1.2"
 
-    assert_equal false, r1_2.satisfied_by?(nil)
-    assert_equal false, r1_2.satisfied_by?(v1_1)
-    assert_equal true,  r1_2.satisfied_by?(v1_2)
-    assert_equal false, r1_2.satisfied_by?(v1_3)
+    refute_satisfied_by nil,   r
+    refute_satisfied_by "1.1", r
+    assert_satisfied_by "1.2", r
+    refute_satisfied_by "1.3", r
   end
 
   def test_satisfied_by_eh_gt
-    r1_2 = Gem::Requirement.new '> 1.2'
-    v1_1 = Gem::Version.new '1.1'
-    v1_2 = Gem::Version.new '1.2'
-    v1_3 = Gem::Version.new '1.3'
+    r = req "> 1.2"
 
-    assert_equal false, r1_2.satisfied_by?(v1_1)
-    assert_equal false, r1_2.satisfied_by?(v1_2)
-    assert_equal true,  r1_2.satisfied_by?(v1_3)
+    refute_satisfied_by "1.1", r
+    refute_satisfied_by "1.2", r
+    assert_satisfied_by "1.3", r
 
     assert_raises NoMethodError do
-      assert_equal true,  r1_2.satisfied_by?(nil)
+      r.satisfied_by? nil
     end
   end
 
   def test_satisfied_by_eh_gte
-    r1_2 = Gem::Requirement.new '>= 1.2'
-    v1_1 = Gem::Version.new '1.1'
-    v1_2 = Gem::Version.new '1.2'
-    v1_3 = Gem::Version.new '1.3'
+    r = req ">= 1.2"
 
-    assert_equal false, r1_2.satisfied_by?(v1_1)
-    assert_equal true,  r1_2.satisfied_by?(v1_2)
-    assert_equal true,  r1_2.satisfied_by?(v1_3)
+    refute_satisfied_by "1.1", r
+    assert_satisfied_by "1.2", r
+    assert_satisfied_by "1.3", r
 
     assert_raises NoMethodError do
-      assert_equal true,  r1_2.satisfied_by?(nil)
+      r.satisfied_by? nil
     end
   end
 
   def test_satisfied_by_eh_list
-    r = Gem::Requirement.create(['> 1.1', '< 1.3'])
-    v1_1 = Gem::Version.new '1.1'
-    v1_2 = Gem::Version.new '1.2'
-    v1_3 = Gem::Version.new '1.3'
+    r = req "> 1.1", "< 1.3"
 
-    assert_equal false, r.satisfied_by?(v1_1)
-    assert_equal true,  r.satisfied_by?(v1_2)
-    assert_equal false, r.satisfied_by?(v1_3)
+    refute_satisfied_by "1.1", r
+    assert_satisfied_by "1.2", r
+    refute_satisfied_by "1.3", r
 
     assert_raises NoMethodError do
-      assert_equal true,  r.satisfied_by?(nil)
+      r.satisfied_by? nil
     end
   end
 
   def test_satisfied_by_eh_lt
-    r1_2 = Gem::Requirement.new '< 1.2'
-    v1_1 = Gem::Version.new '1.1'
-    v1_2 = Gem::Version.new '1.2'
-    v1_3 = Gem::Version.new '1.3'
+    r = req "< 1.2"
 
-    assert_equal true,  r1_2.satisfied_by?(v1_1)
-    assert_equal false, r1_2.satisfied_by?(v1_2)
-    assert_equal false, r1_2.satisfied_by?(v1_3)
+    assert_satisfied_by "1.1", r
+    refute_satisfied_by "1.2", r
+    refute_satisfied_by "1.3", r
 
     assert_raises NoMethodError do
-      assert_equal true,  r1_2.satisfied_by?(nil)
+      r.satisfied_by? nil
     end
   end
 
   def test_satisfied_by_eh_lte
-    r1_2 = Gem::Requirement.new '<= 1.2'
-    v1_1 = Gem::Version.new '1.1'
-    v1_2 = Gem::Version.new '1.2'
-    v1_3 = Gem::Version.new '1.3'
+    r = req "<= 1.2"
 
-    assert_equal true,  r1_2.satisfied_by?(v1_1)
-    assert_equal true,  r1_2.satisfied_by?(v1_2)
-    assert_equal false, r1_2.satisfied_by?(v1_3)
+    assert_satisfied_by "1.1", r
+    assert_satisfied_by "1.2", r
+    refute_satisfied_by "1.3", r
 
     assert_raises NoMethodError do
-      assert_equal true,  r1_2.satisfied_by?(nil)
+      r.satisfied_by? nil
     end
   end
 
   def test_satisfied_by_eh_tilde_gt
-    r1_2 = Gem::Requirement.new '~> 1.2'
-    v1_1 = Gem::Version.new '1.1'
-    v1_2 = Gem::Version.new '1.2'
-    v1_3 = Gem::Version.new '1.3'
+    r = req "~> 1.2"
 
-    assert_equal false, r1_2.satisfied_by?(v1_1)
-    assert_equal true,  r1_2.satisfied_by?(v1_2)
-    assert_equal true,  r1_2.satisfied_by?(v1_3)
+    refute_satisfied_by "1.1", r
+    assert_satisfied_by "1.2", r
+    assert_satisfied_by "1.3", r
 
     assert_raises NoMethodError do
-      assert_equal true,  r1_2.satisfied_by?(nil)
+      r.satisfied_by? nil
     end
   end
 
-end
+  # Assert that two requirements are equal. Handles Gem::Requirements,
+  # strings, arrays, numbers, and versions.
 
+  def assert_requirement_equal expected, actual
+    assert_equal req(expected), req(actual)
+  end
+
+  # Assert that +version+ satisfies +requirement+.
+
+  def assert_satisfied_by version, requirement
+    assert req(requirement).satisfied_by?(v(version)),
+      "#{requirement} is satisfied by #{version}"
+  end
+
+  # Refute the assumption that two requirements are equal.
+
+  def refute_requirement_equal unexpected, actual
+    refute_equal req(unexpected), req(actual)
+  end
+
+  # Refute the assumption that +version+ satisfies +requirement+.
+
+  def refute_satisfied_by version, requirement
+    refute req(requirement).satisfied_by?(v(version)),
+      "#{requirement} is not satisfied by #{version}"
+  end
+end
